--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  background: #000000 !important;
+  color-scheme: dark;
+}
+
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
